<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/workoutContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:background="@drawable/ripple"
    android:clipToPadding="false"
    android:elevation="@dimen/elevation_heigth"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/mDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans_serif"
        android:paddingTop="8dp"
        android:text="@string/description"
        android:textColor="#000"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/mName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans_serif"
        android:paddingTop="8dp"
        android:text="@string/workout"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/mTrophies"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans_serif"
        android:paddingBottom="14dp"
        android:text="@string/date"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/mTrophies"
        app:layout_constraintTop_toBottomOf="@+id/mName" />


    <TextView
        android:id="@+id/mTrophies"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"

        android:layout_marginTop="16dp"
        android:background="@drawable/circle"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="sans_serif"
        android:gravity="center"
        android:shadowRadius="0"
        android:text="@string/_1"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>