<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profilePic"
            android:layout_width="215dp"
            android:layout_height="180dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:src="@drawable/profilepic"
            app:civ_border_color="#98343434"
            app:civ_border_width="1dp" />


        <Button
            android:id="@+id/choosePicButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_design4"
            android:text="@string/choose_picture"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="#dedede"
            android:stateListAnimator="@null"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="0dp">

            <LinearLayout
                android:id="@+id/infoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">


                <TextView
                    android:id="@+id/headerPersonal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/personal_information"
                    android:textColor="#ff6060"
                    android:textSize="26dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="10dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/infoName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/icon_name"
                    android:text="@string/user"
                    android:textColor="#000"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/infoEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/icon_email"
                    android:text="@string/email"
                    android:textColor="#000"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/infoTel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/icon_telephone"
                    android:text="@string/telephone_number"
                    android:textColor="#000"
                    android:textSize="16dp" />


            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>